Fix text alignment.

--- a/assets/styles/single.css
+++ b/assets/styles/single.css
@@ -27,7 +27,6 @@
 	.post-content {
 		display: flex;
 		flex-direction: column;
-		align-items: center;
 		max-width: 45rem;
 		font-size: 1.15em;
 		padding: 0 var(--space-l2);
@@ -92,6 +91,8 @@
 		}
 		
 		&.kg-width-full {
+			align-self: center;
+			
 			img.kg-image {
 				width: 100vw;
 				max-width: 100vw;
